--- a/config/profile.env.example
+++ b/config/profile.env.example
@@ -1,1 +1,16 @@
+# Personal GitHub Profile Configuration (example only)
 
+# Your public display name
+DISPLAY_NAME=X99874
+
+# Short bio or tagline
+BIO="Cybersecurity Enthusiast"
+
+# Social media links
+GITHUB_URL=https:https://github.com/X99874/X99874.git
+
+# Optional contact email
+CONTACT_EMAIL=
+
+# Theme preference (light or dark)
+THEME=dark
