--- a/config/profile.env.example
+++ b/config/profile.env.example
@@ -1,7 +1,7 @@
-# Personal GitHub Profile Configuration (example only)
+# Personal GitHub Profile Configuration
 
 # Your public display name
-DISPLAY_NAME=X99874
+DISPLAY_NAME= X99874
 
 # Short bio or tagline
 BIO="Cybersecurity Enthusiast"
@@ -12,5 +12,5 @@ GITHUB_URL=https:https://github.com/X99874/X99874.git
 # Optional contact email
 CONTACT_EMAIL=
 
-# Theme preference (light or dark)
+# Theme preference
 THEME=dark
