--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Run Tests on Push
+name: Run Echo on Push
 
 on:
   push:
@@ -6,22 +6,12 @@ on:
       - main
 
 jobs:
-  test:
+  echo:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
-
-    - name: Install dependencies
-      run: |
-        pip install -r requirements.txt || echo "No requirements.txt found"
-
-    - name: Run tests
-      run: |
-        python -m unittest discover || echo "No tests found"
+    - name: Echo test
+      run: echo "GitHub Actions is working!"
