--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,43 @@
-# System files
-.DS_Store
-Thumbs.db
+# Backup / temp files
+*.bak
+*.tmp
+*.old
+*.save
 
-# Environment files
-.env
-*.env
-
-# Log and temporary files
+# Log files
 *.log
 *.tmp
 *.bak
+logs/
 
-# Editor and IDE folders
+# Editor / IDE folders
 .vscode/
 .idea/
 *.sublime-project
 *.sublime-workspace
+*.code-workspace
 
-# Swap and lock files
+# Swap and lock files (Linux)
 *.swp
 *.lock
 
-# Build output
-dist/
-build/
+# Environment / secrets
+.env
+*.env
+.env.local
+.env.*.local
 
-# Node modules
+# Build / output 
+build/
+dist/
+out/
+
+# Python cache 
+__pycache__/
+*.py[cod]
+
+# Node.js dependencies 
 node_modules/
 
-# Python cache
-__pycache__/
-*.pyc
+# Misc
+*.dmp
