--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,21 +7,38 @@ on:
     branches: [ main ]
 
 jobs:
-  lint-and-test:
+  python-ci:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [ "3.9", "3.10", "3.11" ]
+
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
-      - name: Install deps
+          python-version: ${{ matrix.python-version }}
+
+      - name: Cache pip
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
       - name: Run linters
         run: |
-          if command -v flake8 >/dev/null 2>&1; then flake8 || true; fi
+          if command -v flake8 >/dev/null 2>&1; then flake8; fi
+
       - name: Run tests
         run: |
-          if [ -f pytest.ini ] || [ -d tests ]; then pytest -q || true; fi
+          if [ -f pytest.ini ] || [ -d tests ]; then pytest -q; fi
