--- a/.github/workflows/markdown-lint.yml
+++ b/.github/workflows/markdown-lint.yml
@@ -5,10 +5,10 @@ permissions:
 on:
   push:
     paths:
-      - '**/*.md'
+      - "**/*.md"
   pull_request:
     paths:
-      - '**/*.md'
+      - "**/*.md"
 
 jobs:
   markdown-lint:
@@ -20,3 +20,6 @@ jobs:
 
       - name: Run Markdown Linter
         uses: avto-dev/markdown-lint@v1
+        with:
+          config: ".markdownlint.json"
+          args: "**/*.md"
